fixed the about section overlapping to projects

--- a/style.css
+++ b/style.css
@@ -111,13 +111,15 @@ nav {
 }
 section {
   padding: 96px 16px 0px 16px;
-  height: 100vh;
+  /* height: 100vh; */
 }
 
 .introduction {
   display: flex;
   flex-direction: column;
   gap: 2em;
+  padding: 96px 16px 0px 16px;
+  height: 100vh;
 }
 .introduction > a {
   text-align: center;
@@ -157,7 +159,6 @@ button {
   grid-template-columns: repeat(1, 1fr);
   gap: 16px;
   margin-bottom: 40px;
-  border: 1px solid black;
 }
 .ui-card {
   min-width: 350px;
